Fix shared media preview banner overflow with scrollable list (#528)

--- a/src/Recollections.Blazor.UI/wwwroot/css/_file-upload.scss
+++ b/src/Recollections.Blazor.UI/wwwroot/css/_file-upload.scss
@@ -1,4 +1,9 @@
 ﻿.file-progress-global {
     top: var(--blz-top-bar-height);
     z-index: 1021;
+
+    .list-group {
+        max-height: 50vh;
+        overflow-y: auto;
+    }
 }
