--- a/src/Recollections.Blazor.UI/wwwroot/css/site.css
+++ b/src/Recollections.Blazor.UI/wwwroot/css/site.css
@@ -25290,6 +25290,10 @@ input.input-number-noarrows[type=number] {
   top: var(--blz-top-bar-height);
   z-index: 1021;
 }
+.file-progress-global .list-group {
+  max-height: 50vh;
+  overflow-y: auto;
+}
 
 .btn-floating {
   --self-width: 46px;
@@ -26080,4 +26084,4 @@ video.pswp__video {
 .version {
   color: #aaaaaa;
 }
-/*# sourceMappingURL=src/Recollections.Blazor.UI/wwwroot/css/site.css.map */
+/*# sourceMappingURL=wwwroot/css/site.css.map */
